# mcpi-revive

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: format.md
examples/: convert_one.py  inspect_blocks.py
src/mcpi_revive/: __init__.py  anvil.py  blocks.py  cli.py  convert.py  parser.py  worldgen.py
tests/: test_anvil.py  test_bed_stitch.py  test_blocks.py  test_blocks_extra.py  test_connections.py  test_determinism.py  test_door_stitch.py  test_parser.py
