[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpi-revive"
version = "0.1.0"
description = "Convert Minecraft: Pi Edition worlds to modern Java Anvil format."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "mcpi-revive contributors"}]
keywords = ["minecraft", "minecraft-pi", "mcpi", "anvil", "world-converter"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.24",
    "nbt>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
mcpi-revive = "mcpi_revive.cli:main"

[project.urls]
Homepage = "https://github.com/ekruges/mcpi-revive"
Issues = "https://github.com/ekruges/mcpi-revive/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
